[gd_scene load_steps=2 format=3 uid="uid://dwk042o4i346s"]

[ext_resource type="Script" uid="uid://ba75h34ndnt3" path="res://Scripts/Leaderboard.gd" id="1_xvobe"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_xvobe")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MainLayout" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Rank" type="Label" parent="Control/MarginContainer/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Rank"
horizontal_alignment = 1

[node name="Name" type="Label" parent="Control/MarginContainer/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
text = "Name"

[node name="Time" type="Label" parent="Control/MarginContainer/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time"
horizontal_alignment = 1

[node name="Score" type="Label" parent="Control/MarginContainer/MainLayout"]
layout_mode = 2
text = "Score"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="ScoreList" type="VBoxContainer" parent="Control/MarginContainer/ScrollContainer"]
layout_mode = 2

[node name="NavContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="PrevButton" type="Button" parent="Control/MarginContainer/NavContainer"]
layout_mode = 2
text = "< Prev"

[node name="PageLabel" type="Label" parent="Control/MarginContainer/NavContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "1"
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="Control/MarginContainer/NavContainer"]
layout_mode = 2
text = "Next >"
